# internal-mcp

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  main.py  pyproject.toml  server.py
clickup/: __init__.py  client.py
database/: __init__.py  client.py  permissions.py
factories/: clickup_client_factory.py  database_client_factory.py  notification_provider_factory.py
interface/: database_client.py
literals/: __init__.py  database_instance.py  notification_kind.py  operation.py  provider.py
notification_providers/: __init__.py  discord.py  mattermost.py
tools/: __init__.py  clickup.py  database.py  notifications.py
